# rescript-string-power

./: .gitignore  0-AI-MANIFEST.a2ml  CHANGELOG.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  EXPLAINME.adoc  LICENSE  READINESS.md  README.adoc  SECURITY.md  TEST-NEEDS.md  justfile  package.json  rescript.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
.well-known/: security.txt
docs/: AFFINESCRIPT_VS_RESCRIPT.adoc
src/: Examples.res  StringPower.res  StringUnionExamples.res
tests/: StringPower_test.res  bench_test.mjs  e2e_test.sh  property_test.mjs  validate_structure.sh
tools/string-union-gen/: Cargo.toml
tools/string-union-gen/src/: main.rs
